fixed spacing for Notes display on cost actual

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -193,21 +193,7 @@ td button:hover{
 /* actual costs page */
 .actual-grid-right {
   border: 2px solid white;
-}
-
-#actual-cost-form {
-  display:grid;
-  grid-template-columns: 1fr 1fr 40px;
-  justify-content: center;
-  gap:20px;
-}
-
-
-.span-2-rows{
-  grid-row: 1 / 3;
-  grid-column: 3 / 4;
-
-  align-self:center;
+  padding-bottom:15px;
 }
 
 .invis-button{
